// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Initial Render 1`] = `
<div
  className="s25Multi s25Control"
  id="s2-multi-0"
>
  <div
    className="s25Body"
  >
    <button
      aria-disabled={true}
      className="s25Remove s25Offscreen"
      disabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      title="Remove selected values"
    >
      <span>
        <IconRemove
          height={20}
          width={20}
        />
      </span>
    </button>
    <label
      className="s25Offscreen"
      htmlFor="s2-multi-0-search"
    >
      Search Label
    </label>
    <input
      aria-autocomplete="none"
      aria-busy={false}
      aria-controls="s2-multi-0-dropdown"
      aria-expanded={false}
      aria-haspopup="true"
      aria-owns="s2-multi-0-dropdown"
      className="s25Search"
      id="s2-multi-0-search"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      role="combobox"
      type="text"
      value=""
    />
    <div
      aria-hidden={true}
      className="s25Toggle"
      onClick={[Function]}
      onMouseDownCapture={[Function]}
    >
      <IconToggle
        height={20}
        width={20}
      />
    </div>
  </div>
</div>
`;

exports[`No Results 1`] = `
<div
  className="s25Multi s25Control s25Open"
  id="s2-multi-1"
>
  <div
    className="s25Body"
  >
    <button
      aria-disabled={true}
      className="s25Remove s25Offscreen"
      disabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      title="Remove selected values"
    >
      <span>
        <IconRemove
          height={20}
          width={20}
        />
      </span>
    </button>
    <label
      className="s25Offscreen"
      htmlFor="s2-multi-1-search"
    >
      Search Label
    </label>
    <input
      aria-autocomplete="none"
      aria-busy={false}
      aria-controls="s2-multi-1-dropdown"
      aria-expanded={true}
      aria-haspopup="true"
      aria-owns="s2-multi-1-dropdown"
      className="s25Search"
      id="s2-multi-1-search"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      role="combobox"
      type="text"
      value="abc"
    />
    <div
      aria-hidden={true}
      className="s25Toggle"
      onClick={[Function]}
      onMouseDownCapture={[Function]}
    >
      <IconToggle
        height={20}
        width={20}
      />
    </div>
  </div>
  <Dropdown
    className="s25Dropdown"
    control={null}
  >
    <div
      className="s25Body"
    >
      <Results
        activeSearchResult={-1}
        dictionary={AmericanEnglishDictionary {}}
        itemLabel={[Function]}
        listboxDomId="s2-multi-1-dropdown"
        minimumCharacters={0}
        onActivateSearchResult={[Function]}
        onLoadMore={[Function]}
        onSelectSearchResult={[Function]}
        resultContent={[Function]}
        search="abc"
        searchHasMoreResults={false}
        searchResultDomId={[Function]}
        searchResults={Array []}
        searchResultsLoading={false}
        showLoadMoreResults={false}
        showMinimumCharactersError={false}
        showNoSearchResultsFound={true}
      />
    </div>
  </Dropdown>
</div>
`;

exports[`Some Results 1`] = `
<div
  className="s25Multi s25Control s25Open"
  id="s2-multi-2"
>
  <div
    className="s25Body"
  >
    <button
      aria-disabled={true}
      className="s25Remove s25Offscreen"
      disabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      title="Remove selected values"
    >
      <span>
        <IconRemove
          height={20}
          width={20}
        />
      </span>
    </button>
    <label
      className="s25Offscreen"
      htmlFor="s2-multi-2-search"
    >
      Search Label
    </label>
    <input
      aria-activedescendant="s2-multi-2-result-3"
      aria-autocomplete="none"
      aria-busy={false}
      aria-controls="s2-multi-2-dropdown"
      aria-expanded={true}
      aria-haspopup="true"
      aria-owns="s2-multi-2-dropdown"
      className="s25Search"
      id="s2-multi-2-search"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      role="combobox"
      type="text"
      value="abc"
    />
    <div
      aria-hidden={true}
      className="s25Toggle"
      onClick={[Function]}
      onMouseDownCapture={[Function]}
    >
      <IconToggle
        height={20}
        width={20}
      />
    </div>
  </div>
  <Dropdown
    className="s25Dropdown"
    control={null}
  >
    <div
      className="s25Body"
    >
      <Results
        activeSearchResult={0}
        dictionary={AmericanEnglishDictionary {}}
        itemLabel={[Function]}
        listboxDomId="s2-multi-2-dropdown"
        minimumCharacters={0}
        onActivateSearchResult={[Function]}
        onLoadMore={[Function]}
        onSelectSearchResult={[Function]}
        resultContent={[Function]}
        search="abc"
        searchHasMoreResults={true}
        searchResultDomId={[Function]}
        searchResults={
          Array [
            Object {
              "id": 0,
              "text": "abc-0",
            },
            Object {
              "id": 1,
              "text": "abc-1",
            },
          ]
        }
        searchResultsLoading={false}
        showLoadMoreResults={true}
        showMinimumCharactersError={false}
        showNoSearchResultsFound={false}
      />
    </div>
  </Dropdown>
</div>
`;
